# hermes-plugin-dynamic-workflows

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
docs/: claude-dynamic-workflows-observations.md
docs/analysis/: deepagents-stackup-2026-07.md
docs/release/: v0.1.0.md
examples/: README.md  event_driven_pr_validation_lane.workflow.json  github_issue_lifecycle_hygiene.workflow.json  hello.workflow.json  hello_script.workflow.py  issue_controller.loop.json  relay_github_exact_head.workflow.json  release_ops_resource_closeout.py  scoped_session_grant.json
src/hermes_workflows/: __init__.py  agent_type_registry.py  agents.py  background.py  capabilities.py  catalog.py  controls.py  delegation.py  errors.py  events.py  grants.py  hermes_kanban.py  loops.py  (+17 more)
tests/: test_actuator_grants.py  test_agent_type_registry.py  test_agents.py  test_async_agent_lifecycle.py  test_background.py  test_capabilities.py  test_catalog.py  test_control_flow.py  test_controls.py  test_delegate_task_child_runner.py  test_examples.py  test_file_store_and_kanban.py  test_generic_issue_lifecycle_script.py  test_hermes_kanban_backend.py  test_interactive_approvals.py  test_journal_durability.py  test_kanban_agent.py  test_kanban_durable_resume.py  test_kanban_event_log.py  test_kanban_notify.py  test_kanban_result_contract.py  test_kanban_suspend_resume.py  test_loop_controller.py  test_loop_until_dry_fixture.py  test_pending_writes_resume_contract.py  test_plugin_registration.py  test_prompt_agent.py  test_relay_github_contract.py  test_resource_finalizer_registry.py  test_result_size_bound.py  test_retryable_dispatch_errors.py  test_rpc.py  test_run.py  test_schema_subset.py  test_script_catalog.py  test_script_store.py  test_script_store_sqlite.py  test_script_validator.py  test_status.py  test_subagent_transcripts.py  (+5 more)
(+9 files in other folders)
