[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes_workflows"
version = "0.1.0"
description = "Sandboxed, script-led dynamic workflow orchestration over Hermes agents and Kanban awaitables (pure-stdlib skeleton)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Donovan Yohan" }]
keywords = ["hermes", "workflows", "orchestration", "agents", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

# Zero runtime dependencies: pure Python 3.11 stdlib only
# (json, dataclasses, hashlib, uuid, datetime, typing, threading, pathlib, os, re).
# YAML is intentionally unsupported to avoid PyYAML.
dependencies = []

[project.urls]
Homepage = "https://github.com/donovan-yohan/hermes-plugin-dynamic-workflows"
Source = "https://github.com/donovan-yohan/hermes-plugin-dynamic-workflows"
Design = "https://github.com/donovan-yohan/hermes-plugin-dynamic-workflows/blob/main/DESIGN.md"

[project.optional-dependencies]
# Tests are written with stdlib unittest and require no third-party packages.
# pytest is offered only as a convenience runner for discovery.
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_workflows = ["examples/scripts/*/*.workflow", "examples/scripts/*/*.workflow.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
